--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <section class="nav">
                 <div class="nav-left">
-                    <img src="https://lh3.googleusercontent.com/dC1XGAtfiatJI7dwYPH1OlUMYo2eKGEs7IRjjPWUQPUbDdoyCzEKv1VRMk5rdwMmnZQspEXxV5YAjoYDny07GajNIEy88rt-eVNTIT8j59lzj2QtEIEN7VnsqsH4hPLZjS-ZJRQsSOeqDRQ_PEMrHecAOAv0OP3_OFSIIcRaVUP2lrboFWeGBfMwn8dLfRxs74XNPCOglxeGgLlY5BSy-vyNCRqbEBtJtXaZSfsjWRZStH1RYO_lWbkiaqqLVwz6C3eVGHFdm1FLAkYKJp7IODATwdmmPRRD2_Kzk96xmKu_jY4Qjtx8IdyelCgkmPrl_Q2bzPOY4tD4r62XPzuhmehuihPmN5lGNUiAi-naZRKltfNUMEzSg5ReAyYXlYWQE6n8Z5M8vGlNQdiszemqnZfhB-xKQE2MzAF0gYCrH5nqHT0Z1Du6FtVCcJpwou9XTgtlZSAwY4GfLr27cUqJguktNd64U8zNYxOEHxzzHNI8eAT0eSHWm0iD--d9jCtl7_kW2xvnbiw3F9L09Ax-AqaSY53d-xYA4ja-F7oD-rJZl7_fojgXKrLimbEh_Rv6r2tEZSUipqYXon8NJ3suIhX-l1bgFrlTlrtD7PcC8eNyTDhUrpJt29M9G0GSdRjCbJkRML1XqLC1gQKLO6Bv9G5-NWQXG_Dhon-Og9kBhAmD_wAL5H6T8HFlifVEdc8wk5WH5Vqk54da4CCVqQM2mJsaabIDqNDkHZTcVoagv6NlTylbr-zi7r4kR0nTmCu6w5B91JziF_nE-_evTamRpoLXo1Sm9kaD36xsP9lwUN3TFVDV4uxGC3k-43YVaav8DHrkieFGbSkBO4mmBmClYe61DIRyW2nJKR4UDEAFst_l_8WmjdpEbkXYT9HKMPWRRzdWRTa_JV6pdxm4Gsi1tmng9Ob8BjPmn9O4Kr0FJA7vDdqt4syZ9oZ4cpJwLEvtpjKYK4e7ITHmhNT_UdJ7=w86-h181-no?authuser=0" alt="photo log">
+                    <img src="https://avatars.githubusercontent.com/u/29297788?v=4">
                     <div class="textPharagraf">
                         <p>Rodolfo Rondinely</p>
                         <p class="status">Online</p>
